--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -23,3 +23,10 @@ msgstr "Bienvenue chez Holberton"
 
 msgid "home_header"
 msgstr "Bonjour monde!"
+
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
+
+
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
