--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -30,3 +30,6 @@ msgstr "Vous n'êtes pas connecté."
 
 msgid "logged_in_as"
 msgstr "Vous êtes connecté en tant que %(username)s."
+
+msgid "current_time_is"
+msgstr "Nous sommes le %(current_time)s."
